<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Eye Candy</string>
    <string name="wait">conjouring</string>
    <string name="gallery_select">Select</string>
    <string name="dialog_add_subreddit_title">Add Subreddit</string>
    <string name="add_subreddit_message">Subreddit to Add (eg: earthporn)</string>
    <string name="add_subreddit">Add</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="error_loading_image">Error loading image, skipping...</string>
    <string name="dream_viewer">EyeCandy (static)</string>
    <string name="dream_burns">EyeCandy (animated)</string>
    <string name="starting_scrape">Starting scrape...</string>
    <string name="scrape_complete">Scrape complete</string>
    <string name="error_loading_zoomed_image">Error loading image</string>
    <string name="open_dialog_title">Complete Action With</string>
    <string name="open_with">Open</string>
    <string name="share_with">Share</string>
    <string name="dialog_open_source">Open as</string>
    <string name="view_as_gallery">View as Gallery</string>
    <string name="view_as_slideshow">View as Slide Show</string>
    <string name="nag_title">Welcome to Eye Candy</string>
    <string name="nag_text">
        <![CDATA[
        <p>
            Development of Eye Candy is made possible through the support of <b>viewers like you!</b>
        </p>

        <p>
            By <b>purchasing Eye Candy</b>, you will receive the <b>full Eye Candy experience!</b>
        </p>

        <p>
            &#8226; <em>All advertising will be removed!</em><br/>
            &#8226; <em>All nagging will be removed!</em><br/>
            &#8226; <em>Access to premium and beta features!</em>
        </p>
        ]]>
    </string>

    <string name="purchase_call_to_action">Buy now</string>
    <string name="nag_thank_you">Thank you for installing Eye Candy!</string>
    <string name="unlock_eyecandy">Unlock</string>
    <string name="first_run">Please be patient, scraping...</string>
    <string name="setup_description">Select from the default subreddits or add your favorites...</string>
    <string name="done">Done!</string>
    <string name="add_subreddit_hint">earthporn</string>
    <string name="media_route_menu_title">Cast!</string>
    <string name="app_description">Images from Reddit and Imgur</string>
    <string name="about">About</string>
    <string name="preferences_activity">Settings</string>
    <string name="view_as_feed">View as Feed</string>
    <string name="settings">Settings</string>
    <string name="pref_viewer_title">Slide Show Settings</string>
    <string name="pref_premium_title">Premium Settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="enable_cast">Cast</string>
    <string name="pref_enable_cast_summ">Enable experimental Cast support</string>
    <string name="pref_flip_delay">Flip Delay</string>
    <string name="pref_flip_delay_summ">Number of seconds before flipping image</string>
    <string name="pref_flip_delay_mesg">Please select the number of seconds between flipping images:</string>
</resources>
